--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-04-16 Mon 14:49 -->
+<!-- 2018-04-16 Mon 15:09 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 85%;">R workshop for the</span><br>International Ornithological Congress<br><span style="font-size: 85%;">Vancouver, 2018</span></title>
@@ -547,38 +547,38 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1a47806">Topics covered</a>
+<li><a href="#org3420e5b">Topics covered</a>
 <ul>
-<li><a href="#org956d77e">Part 1 (very briefly): best practices in R</a></li>
-<li><a href="#org45c4830">Part 2: Functional programming in R</a></li>
+<li><a href="#org7045070">Part 1 (very briefly): best practices in R</a></li>
+<li><a href="#org353c9a9">Part 2: Functional programming in R using purrr</a></li>
 </ul>
 </li>
-<li><a href="#org4b70153">Audience for the workshop</a></li>
+<li><a href="#orgd77e04d">Audience for the workshop</a></li>
 </ul>
 </div>
 </div>
 <p>
-Most of us, biologists, do not learn R properly: we do not have a computing science background, the lucky ones have access to R courses, and a really lucky few have access to R courses making use of modern packages. But for the most part, we learn R as we go, on our own. So we become good at problem solving. But do we ever become good at solving R problems <i>well</i>?<br />
+Most of us biologists, do not learn R properly: we do not have a computing science background, we do not necessarily have access to R courses, and when we do, these seldom make use of modern R tools. So, for the most part, we learn R as we go, on our own. And we become good at problem solving. But do we ever become good at solving R problems <i>well</i>?<br />
 </p>
 
 <p>
-Having code that works is great of course. But having code that is more efficient, easier to read, less prone to errors, shorter, clearer, cleaner, and which makes a better use of R's characteristics as a coding language, is better.<br />
+Having code that works is great of course. But having code that is more efficient, easier to read, less prone to errors, shorter, clearer, cleaner, and which makes a better use of R's characteristics as a coding language, is certainly a whole lot better.<br />
 </p>
 
 <p>
-This tutorial follows the recommendations and "views" of the <code class="src src-R">tidyverse</code>, a set of modern R packages. It will start with a very short introduction to best practices in R for reproducibility and readability, then dive into the subject of functional programming with <code class="src src-R">purrr</code>.<br />
+This tutorial follows the recommendations and "views" of the <code class="src src-R">tidyverse</code>, a set of modern R packages. It will start with a very short introduction to best practices in R for reproducibility and readability, then dive into the subject of functional programming using the <code class="src src-R">tidyverse</code> package <code class="src src-R">purrr</code>.<br />
 </p>
 
-<div id="outline-container-org1a47806" class="outline-2">
-<h2 id="org1a47806">Topics covered</h2>
-<div class="outline-text-2" id="text-org1a47806">
+<div id="outline-container-org3420e5b" class="outline-2">
+<h2 id="org3420e5b">Topics covered</h2>
+<div class="outline-text-2" id="text-org3420e5b">
 </div>
-<div id="outline-container-org956d77e" class="outline-3">
-<h3 id="org956d77e">Part 1 (very briefly): best practices in R</h3>
-<div class="outline-text-3" id="text-org956d77e">
+<div id="outline-container-org7045070" class="outline-3">
+<h3 id="org7045070">Part 1 (very briefly): best practices in R</h3>
+<div class="outline-text-3" id="text-org7045070">
 <ul class="org-ul">
 <li>Self-contained projects for reproducibility (as described by <a href="https://github.com/jennybc">Jenny Bryan</a>),<br /></li>
-<li>Formatting for better readability (as described by <a href="http://hadley.nz/">Hadley Wickham</a>).<br /></li>
+<li>Formatting for better readability (as suggested by <a href="http://hadley.nz/">Hadley Wickham</a>).<br /></li>
 </ul>
 
 <p>
@@ -587,9 +587,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/Internat
 </div>
 </div>
 
-<div id="outline-container-org45c4830" class="outline-3">
-<h3 id="org45c4830">Part 2: Functional programming in R</h3>
-<div class="outline-text-3" id="text-org45c4830">
+<div id="outline-container-org353c9a9" class="outline-3">
+<h3 id="org353c9a9">Part 2: Functional programming in R using purrr</h3>
+<div class="outline-text-3" id="text-org353c9a9">
 <ul class="org-ul">
 <li>Introduction to functional programming,<br /></li>
 <li>How to apply functions to many elements with <code class="src src-R">purrr</code> (alternative to loops),<br /></li>
@@ -604,9 +604,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/Internat
 </div>
 </div>
 
-<div id="outline-container-org4b70153" class="outline-2">
-<h2 id="org4b70153">Audience for the workshop</h2>
-<div class="outline-text-2" id="text-org4b70153">
+<div id="outline-container-orgd77e04d" class="outline-2">
+<h2 id="orgd77e04d">Audience for the workshop</h2>
+<div class="outline-text-2" id="text-orgd77e04d">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation, simple functions, and loops,<br /></li>
 <li>Advanced users familiar with functional programming using the <code class="src src-R">apply</code> functions family and interested in discovering the "purrring" way.<br /></li>
