--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-04-16 Mon 15:09 -->
+<!-- 2018-04-17 Tue 10:46 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 85%;">R workshop for the</span><br>International Ornithological Congress<br><span style="font-size: 85%;">Vancouver, 2018</span></title>
@@ -301,22 +301,31 @@
     line-height: 22px;
     width: max-content;
   }
-  div[class="ASCII"] {		/*for block center*/
+  div[class="ASCII"] {		/*for block ascii*/
     font-family: 'Montez';
     line-height: 26px;
     font-size: 130%;
   }
-  div[class="VERBATIM"] {	/*for block center*/
-    /* background-color: #f5f4eb; */
-    font-family: 'Anonymous Pro';
-    margin: auto;
-    width: max-content;
-    color: #000000;
-    /* padding: 0.05em 0.8em 0.05em 0.8em; */
-    font-size: 88%;
-    line-height: 20px;
-    /* border: 0.5pt solid #d9d9d9; */
-    /* border-radius: 5px; */
+  /* div[class="VERBATIM"] {	/\*for block verbatim*\/ */
+  /*   /\* background-color: #f5f4eb; *\/ */
+  /*   font-family: 'Anonymous Pro'; */
+  /*   margin: auto; */
+  /*   width: max-content; */
+  /*   color: #000000; */
+  /*   /\* padding: 0.05em 0.8em 0.05em 0.8em; *\/ */
+  /*   font-size: 88%; */
+  /*   line-height: 20px; */
+  /*   /\* border: 0.5pt solid #d9d9d9; *\/ */
+  /*   /\* border-radius: 5px; *\/ */
+  /* } */
+  div[class="VERBATIM"] {	/*for block verbatim*/
+    line-height: 22px;
+    /* font-weight: bold; */
+    margin: 45px 0px 45px 200px;
+    /* padding-left: 10px; */
+    /* border-left: 3px solid #890c0c; */
+    font-size: 135%;
+    color: #7c6262;
   }
   .org-ess-numbers {
     color: #e28200; 
@@ -539,7 +548,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>April 16, 2018</span>
+<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>April 17, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 85%;">R workshop for the</span><br>International Ornithological Congress<br><span style="font-size: 85%;">Vancouver, 2018</span></h1>
@@ -547,13 +556,13 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3420e5b">Topics covered</a>
+<li><a href="#org1074d19">Topics covered</a>
 <ul>
-<li><a href="#org7045070">Part 1 (very briefly): best practices in R</a></li>
-<li><a href="#org353c9a9">Part 2: Functional programming in R using purrr</a></li>
+<li><a href="#org0d54d1b">Part 1 (very briefly): best practices in R</a></li>
+<li><a href="#org86f0bc1">Part 2: Functional programming in R using purrr</a></li>
 </ul>
 </li>
-<li><a href="#orgd77e04d">Audience for the workshop</a></li>
+<li><a href="#orgb010051">Audience for the workshop</a></li>
 </ul>
 </div>
 </div>
@@ -569,15 +578,16 @@ Having code that works is great of course. But having code that is more efficien
 This tutorial follows the recommendations and "views" of the <code class="src src-R">tidyverse</code>, a set of modern R packages. It will start with a very short introduction to best practices in R for reproducibility and readability, then dive into the subject of functional programming using the <code class="src src-R">tidyverse</code> package <code class="src src-R">purrr</code>.<br />
 </p>
 
-<div id="outline-container-org3420e5b" class="outline-2">
-<h2 id="org3420e5b">Topics covered</h2>
-<div class="outline-text-2" id="text-org3420e5b">
+<div id="outline-container-org1074d19" class="outline-2">
+<h2 id="org1074d19">Topics covered</h2>
+<div class="outline-text-2" id="text-org1074d19">
 </div>
-<div id="outline-container-org7045070" class="outline-3">
-<h3 id="org7045070">Part 1 (very briefly): best practices in R</h3>
-<div class="outline-text-3" id="text-org7045070">
+<div id="outline-container-org0d54d1b" class="outline-3">
+<h3 id="org0d54d1b">Part 1 (very briefly): best practices in R</h3>
+<div class="outline-text-3" id="text-org0d54d1b">
 <ul class="org-ul">
-<li>Self-contained projects for reproducibility (as described by <a href="https://github.com/jennybc">Jenny Bryan</a>),<br /></li>
+<li>Self-contained projects for portability (as described by <a href="https://github.com/jennybc">Jenny Bryan</a>),<br /></li>
+<li>Clean sessions for reproducibility<br /></li>
 <li>Formatting for better readability (as suggested by <a href="http://hadley.nz/">Hadley Wickham</a>).<br /></li>
 </ul>
 
@@ -587,9 +597,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/Internat
 </div>
 </div>
 
-<div id="outline-container-org353c9a9" class="outline-3">
-<h3 id="org353c9a9">Part 2: Functional programming in R using purrr</h3>
-<div class="outline-text-3" id="text-org353c9a9">
+<div id="outline-container-org86f0bc1" class="outline-3">
+<h3 id="org86f0bc1">Part 2: Functional programming in R using purrr</h3>
+<div class="outline-text-3" id="text-org86f0bc1">
 <ul class="org-ul">
 <li>Introduction to functional programming,<br /></li>
 <li>How to apply functions to many elements with <code class="src src-R">purrr</code> (alternative to loops),<br /></li>
@@ -604,9 +614,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/Internat
 </div>
 </div>
 
-<div id="outline-container-orgd77e04d" class="outline-2">
-<h2 id="orgd77e04d">Audience for the workshop</h2>
-<div class="outline-text-2" id="text-orgd77e04d">
+<div id="outline-container-orgb010051" class="outline-2">
+<h2 id="orgb010051">Audience for the workshop</h2>
+<div class="outline-text-2" id="text-orgb010051">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation, simple functions, and loops,<br /></li>
 <li>Advanced users familiar with functional programming using the <code class="src src-R">apply</code> functions family and interested in discovering the "purrring" way.<br /></li>
