--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-04-19 Thu 04:19 -->
+<!-- 2018-04-23 Mon 15:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -564,7 +564,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>April 19, 2018</span>
+<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>April 23, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -572,26 +572,35 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2c63a8a">Part 1 (very briefly): Best practices in R</a></li>
-<li><a href="#org682e750">Part 2: Functional programming in R with purrr</a></li>
+<li><a href="#orgde2b454">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#orgdc35ccd">2. Functional programming (with the package purrr)</a>
+<ul>
+<li><a href="#org465ca36">Target audience</a></li>
+<li><a href="#org19f74b2">Software requirements</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
 <p>
-Most of us biologists, do not learn R properly: we do not have a computing science background, we do not necessarily have access to R courses, and when we do, these seldom make use of modern R tools. So, for the most part, we learn R as we go, on our own. And we become good at problem solving. But do we ever become good at solving R problems <i>well</i>?<br />
+Most of us biologists, do not learn R properly: we do not have a computing science background, we do not necessarily have access to R courses, and when we do, these seldom make use of modern tools. So, for the most part, we learn R as we go and we become good at problem solving. But do we ever become good at writing good R code?<br />
 </p>
 
 <p>
-Having code that works is great of course. But having code that is more efficient, easier to read, less prone to errors, shorter, clearer, cleaner, and which makes a better use of R's characteristics as a coding language, is certainly a whole lot better.<br />
+This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-org2c63a8a" class="outline-2">
-<h2 id="org2c63a8a">Part 1 (very briefly): Best practices in R</h2>
-<div class="outline-text-2" id="text-org2c63a8a">
+<div id="outline-container-orgde2b454" class="outline-2">
+<h2 id="orgde2b454">1. Portability, reproducibility, and readability</h2>
+<div class="outline-text-2" id="text-orgde2b454">
+<p>
+Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
+</p>
+
 <ul class="org-ul">
 <li>Self-contained projects for portability (as described by <a href="https://github.com/jennybc">Jenny Bryan</a>),<br /></li>
-<li>Clean sessions for reproducibility<br /></li>
-<li>Formatting for better readability (as suggested by <a href="http://hadley.nz/">Hadley Wickham</a>).<br /></li>
+<li>Clean sessions for reproducibility,<br /></li>
+<li>Standard formatting for better readability (as suggested by <a href="http://hadley.nz/">Hadley Wickham</a>).<br /></li>
 </ul>
 
 <p>
@@ -600,17 +609,71 @@ The workshop material can be found <a href="https://prosoitos.github.io/Internat
 </div>
 </div>
 
-<div id="outline-container-org682e750" class="outline-2">
-<h2 id="org682e750">Part 2: Functional programming in R with purrr</h2>
-<div class="outline-text-2" id="text-org682e750">
+<div id="outline-container-orgdc35ccd" class="outline-2">
+<h2 id="orgdc35ccd">2. Functional programming (with the package purrr)</h2>
+<div class="outline-text-2" id="text-orgdc35ccd">
+<p>
+What do you do when you  need to apply similar code to multiple datasets or multiple variables within datasets?<br />
+</p>
+
+<p>
+You wrote some code that works on tarsus length. Now, you would like to apply it to the rest of your banding data. Or you applied code to a population and you would like to apply it to other populations. Or you wrangled the data in a file, but you have a whole folder full of similar files&#x2026;<br />
+</p>
+
+<p>
+Copying and pasting code, besides being tedious, is a form of hard coding and is thus prone to errors. Loops provide a better approach, but they require a lot of code and still involve some level of repetition. Functional programming is a coding paradigm in which functions are applied to several elements in a vectorized fashion. This makes for compact code that is much easier to read and takes advantage of the vector-based nature of R. The <code class="src src-R">purrr</code> package (part of the core <code class="src src-R">tidyverse</code>) provides a collection of efficient and consistent tools to functional programming in R.<br />
+</p>
+
+<p>
+Most of our workshop time will focus on:<br />
+</p>
+
 <ul class="org-ul">
-<li>Introduction to functional programming,<br /></li>
-<li>How to apply functions to many elements with some of the main <code class="src src-R">purrr</code> functions,<br /></li>
-<li>Bonus sidetrack: a few of the less used pipes of the <code class="src src-R">magrittr</code> package.<br /></li>
+<li>A very brief introduction to functional programming,<br /></li>
+<li>How to apply functions to several elements of a list/vector with some of the main <code class="src src-R">purrr</code> functions,<br /></li>
+<li>And a bonus unrelated sidetrack on a few of the less used pipes of the <code class="src src-R">magrittr</code> package which are so useful when playing in the <code class="src src-R">tidyverse</code>.<br /></li>
 </ul>
 
 <p>
-The workshop material (without exercise solutions) can be found <a href="https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_functional-programming_no-answer.html">here</a>.<br />
+The workshop material (without the solutions to the short challenges) can be found <a href="https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_functional-programming_no-answer.html">here</a>.<br />
+</p>
+</div>
+
+<div id="outline-container-org465ca36" class="outline-3">
+<h3 id="org465ca36">Target audience</h3>
+<div class="outline-text-3" id="text-org465ca36">
+<ul class="org-ul">
+<li>Intermediate R users comfortable with basic data manipulation and simple functions, or<br /></li>
+<li>Advanced users familiar with functional programming using the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions family and interested in discovering the "purrring" way.<br /></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org19f74b2" class="outline-3">
+<h3 id="org19f74b2">Software requirements</h3>
+<div class="outline-text-3" id="text-org19f74b2">
+<p>
+In order to make the best of this workshop, please bring a laptop with the following installed:<br />
+</p>
+
+<ul class="org-ul">
+<li>the <b>latest</b> R version (if you usually run R in RStudio, make sure that you also have the latest RStudio),<br /></li>
+<li>the <b>latest</b> version of the <code class="src src-R">tidyverse</code> package,<br /></li>
+<li>the <b>latest</b> version of the <code class="src src-R">patchwork</code> package.<br /></li>
+</ul>
+
+<p>
+At the time of this writing, the <code class="src src-R">patchwork</code> package is not yet on CRAN and can be installed by running:<br />
+</p>
+
+<div class="org-src-container">
+<pre class="src src-R"><span class="org-ess-function-call">install.packages</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">(</span></span><span class="org-string">"devtools"</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">)</span></span>                      <span class="org-comment-delimiter"># </span><span class="org-comment">if you haven't installed it already</span>
+devtools::<span class="org-ess-function-call">install_github</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">(</span></span><span class="org-string">"thomasp85/patchwork"</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">)</span></span>
+</pre>
+</div>
+
+<p>
+No data file is needed for this workshop.<br />
 </p>
 
 <br>
@@ -622,6 +685,7 @@ an R Peer at the <a href="https://www.sfu.ca/dean-gradstudies/new_graduate_stude
 a <a href="https://www.lib.sfu.ca/about/branches-depts/slc/slc-who/grad-facilitators/undergraduate-writing">Graduate Writing Facilitator</a> at the <a href="https://www.lib.sfu.ca/about/branches-depts/slc">Student Learning Commons</a>,<br />
 and a certified <a href="https://software-carpentry.org/">Software Carpentry</a> and <a href="http://www.datacarpentry.org/">Data Carpentry</a> instructor.<br />
 </p>
+</div>
 </div>
 </div>
 </div>
